--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -46,6 +46,7 @@
     "jest-expo": "^54.0.17",
     "tailwindcss": "^3.4.19",
     "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
   "overrides": {
