--- a/packages/supabase-client/package.json
+++ b/packages/supabase-client/package.json
@@ -18,8 +18,11 @@
     "test:ci": "pnpm test:coverage"
   },
   "dependencies": {
+    "@noble/hashes": "^2.0.1",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@scure/base": "^2.0.0",
     "@supabase/supabase-js": "^2.39.3",
-    "@react-native-async-storage/async-storage": "^1.21.0"
+    "buffer": "^6.0.3"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
