--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -12,21 +12,26 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "test:ci": "jest --runInBand --coverage"
+    "test:ci": "jest --runInBand --coverage",
+    "lint": "eslint . --quiet"
   },
   "dependencies": {
+    "@noble/hashes": "^2.0.1",
     "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/netinfo": "11.3.1",
+    "@react-native-community/netinfo": "11.4.1",
+    "@scure/base": "^2.0.0",
     "@supabase/supabase-js": "^2.39.3",
     "@yombri/design-tokens": "workspace:*",
     "@yombri/native-runtime": "workspace:*",
     "@yombri/supabase-client": "workspace:*",
+    "buffer": "^6.0.3",
     "expo": "~52.0.49",
-    "expo-camera": "~15.0.16",
-    "expo-constants": "~16.0.2",
+    "expo-blur": "~14.0.3",
+    "expo-camera": "~16.0.18",
+    "expo-constants": "~17.0.8",
     "expo-dev-client": "~5.0.20",
     "expo-linking": "^7.0.5",
-    "expo-location": "~17.0.1",
+    "expo-location": "~18.0.10",
     "expo-modules-core": "2.2.3",
     "expo-router": "~4.0.22",
     "expo-splash-screen": "^0.29.24",
@@ -36,14 +41,14 @@
     "react-native-qrcode-svg": "^6.3.21",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.2.0"
+    "react-native-svg": "15.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.14",
     "@types/react": "~18.3.28",
     "jest": "^29.7.0",
-    "jest-expo": "^54.0.17",
+    "jest-expo": "^52.0.6",
     "tailwindcss": "^3.4.19",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
