--- a/package.json
+++ b/package.json
@@ -3,21 +3,24 @@
   "private": true,
   "scripts": {
     "dev:mobile": "pnpm --filter mobile dev",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "lint": "eslint .",
     "typecheck": "tsc -b",
     "test": "pnpm --filter apps/mobile test",
     "test:ci": "pnpm --filter apps/mobile test:ci",
     "ci": "pnpm typecheck"
   },
   "devDependencies": {
+    "@eslint/js": "^10.0.1",
     "@types/react": "^18.2.55",
     "@typescript-eslint/eslint-plugin": "^8.55.0",
     "@typescript-eslint/parser": "^8.55.0",
     "eslint": "^9.0.0",
+    "eslint-formatter-unix": "^9.0.1",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.0"
+    "typescript": "^5.6.0",
+    "typescript-eslint": "^8.56.0"
   },
   "workspaces": [
     "apps/*",
